.archive/kubernetes/openclaw/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openclaw
  annotations:
    external-dns.alpha.kubernetes.io/external: "true"
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'openclaw.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: openclaw
          port: 18789
          weight: 100
      timeouts:
        request: "0s"
